fix: :lipstick: Align the location to 2/3s of the page

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -103,7 +103,7 @@
             padding-left: $spacing-gap;
         }
         .location{
-            padding-left: $spacing-gap;
+            padding-left: $spacing-gap * 2 - 3;
         }
 
         .and {
